force-app/main/default/objects/Roles__c.object
<CustomObject>
    <description>Custom version of Contact Roles</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Captures the related account record</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <description>Used in Board Management System app</description>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monash appointee &amp; staff member</fullName>
                </value>
                <value>
                    <fullName>Monash appointee &amp; non-staff member</fullName>
                </value>
                <value>
                    <fullName>Not a Monash appointee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chair__c</fullName>
        <label>Chair</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <description>Used by Board Management System app</description>
        <label>Comments/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Captures the related contact</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Initial results are limited to contacts at the school only. Remove the filter to search all contacts</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullname__c</fullName>
        <description>Formula field which concatenates the contact&apos;s first and last names</description>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Corporate_Contact_del__c</fullName>
        <formula>Contact__r.Is_Corporate_Contact__c</formula>
        <label>Is Corporate Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is the primary contact</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is the primary contact</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Archive Status</description>
        <label>Ready to Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Captures the assigned role (staff) within a secondary school</description>
        <inlineHelpText>Captures the assigned role (staff) within a secondary school</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Monash - Main Contact</fullName>
                </value>
                <value>
                    <fullName>Access Monash Yr 10 Champion Contact</fullName>
                </value>
                <value>
                    <fullName>Access Monash - Yr 9 Champion Contact</fullName>
                </value>
                <value>
                    <fullName>Algorithmic Teacher</fullName>
                </value>
                <value>
                    <fullName>Biology Coordinator</fullName>
                </value>
                <value>
                    <fullName>Careers Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>Chemistry Coordinator</fullName>
                </value>
                <value>
                    <fullName>Commerce Coordinator</fullName>
                </value>
                <value>
                    <fullName>Deputy Principal</fullName>
                </value>
                <value>
                    <fullName>English Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>Geography Coordinator</fullName>
                </value>
                <value>
                    <fullName>Head of careers</fullName>
                </value>
                <value>
                    <fullName>History Coordinator</fullName>
                </value>
                <value>
                    <fullName>IB Coordinator</fullName>
                </value>
                <value>
                    <fullName>Indigenous Coordinator</fullName>
                </value>
                <value>
                    <fullName>Information Technology Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>International Student Coordinator</fullName>
                </value>
                <value>
                    <fullName>International Studies Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>Legal Studies Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>LOTE Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>Maths Co-ordinator</fullName>
                </value>
                <value>
                    <fullName>Media/Communication Coordinator</fullName>
                </value>
                <value>
                    <fullName>Monash Scholars Contact</fullName>
                </value>
                <value>
                    <fullName>Music Coordinator</fullName>
                </value>
                <value>
                    <fullName>Pathways Coordinator</fullName>
                </value>
                <value>
                    <fullName>Politics Coordinator</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Psychology Coordinator</fullName>
                </value>
                <value>
                    <fullName>Religious Studies Coordinator</fullName>
                </value>
                <value>
                    <fullName>Science Co-ordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Invitation Sent</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Incoming - Unregistered</fullName>
                </value>
                <value>
                    <fullName>Outgoing - Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to capture if the Agency Counselor is valid or not</description>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator whether the Lead/Contact is a parent of a prospective student</description>
        <label>is Parent?</label>
        <type>Checkbox</type>
    </fields>
    <label>Role</label>
    <nameField>
        <displayFormat>ROL-{00000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <recordTypes>
        <fullName>Agency_Contact_Role</fullName>
        <active>true</active>
        <label>Agency Contact Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>COO</fullName>
        <active>true</active>
        <description>Available only for Monash Board Management (COO) Users</description>
        <label>COO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Recordtype for Roles__c</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>